2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/tile/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/tile/nptl/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/alpha/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/alpha/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/powerpc/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/powerpc/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/pthread/createthread.c: Include <arch-fork.h>.
	* sysdeps/unix/sysv/linux/ia64/arch-fork.h (ARCH_CLONE): New macro.
	* sysdeps/ia64/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/ia64/nptl/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/microblaze/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/microblaze/nptl/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/sh/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* nptl/sysdeps/unix/sysv/linux/sh/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/m68k/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/m68k/nptl/createthread.c: File removed.

	* sysdeps/hppa/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/hppa/nptl/createthread.c: File removed.

	* sysdeps/mips/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/mips/nptl/createthread.c: File removed.

	* sysdeps/arm/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/arm/createthread.c: File removed.

	* nptl/sysdeps/pthread/createthread.c (TLS_DEFINE_INIT_TP): New macro,
	if not already defined.
	(do_clone): Use that in place of PREPARE_CREATE and TLS_VALUE.
	* nptl/sysdeps/x86_64/tls.h (TLS_DEFINE_INIT_TP): New macro.